refactor - bookcatalolg 리팩토링 (outbox 일반화 및 패키지 구조 리팩토링)